--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="jigar sable, portfolio, jigar, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="keywords" content="yasindu dissanayake, portfolio, yasindu, machine learning, devops" />
     <meta name="description" content="Welcome to Yasindu's Portfolio. Machine Learning, DevOps & Software Development Enthusiast" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
+    <link id='yasindu' rel="shortcut icon" href="./assets/images/yasindu-1.png" type="image/x-png">
     <title>Portfolio | Yasindu Dissanayake</title>
 </head>
 <body oncontextmenu="null">
@@ -34,6 +34,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#work">Work</a></li>
             <li><a href="#experience">Experience</a></li>
+            <li><a href="#certifications">certifications</a></li>
             <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -63,7 +64,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/hero.png" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/yasindu-2.png" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -260,6 +261,24 @@
 </section>
 <!-- experience section ends -->
 
+<!-- certifications section starts -->
+<section class="certifications" id="certifications">
+  <h2 class="heading"><i class="fas fa-certificate"></i> My <span>Certifications</span></h2>
+  
+  <div class="cert-container">
+    <div class="cert-carousel">
+      <button class="carousel-btn left-btn"><i class="fas fa-chevron-left"></i></button>
+      
+      <div class="cert-items">
+        <!-- Certificates will be added dynamically by JavaScript -->
+      </div>
+      
+      <button class="carousel-btn right-btn"><i class="fas fa-chevron-right"></i></button>
+    </div>
+  </div>
+</section>
+<!-- certifications section ends -->
+
 <!-- contact section starts -->
 <section class="contact" id="contact">
   
@@ -319,6 +338,7 @@
           <a href="#education"><i class="fas fa-chevron-circle-right"></i> education</a>
           <a href="#work"><i class="fas fa-chevron-circle-right"></i> work</a>
           <a href="#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
+          <a href="#certifications"><i class="fas fa-chevron-circle-right"></i> certifications</a>
       </div>
 
       <div class="box">
