--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
 
       <div class="box">
           <h3>Quick Links</h3>
-          <a href="#home"><i class="fas fa-chevron-circle-right"></i> home</a>
-          <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
-          <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
-          <a href="#education"><i class="fas fa-chevron-circle-right"></i> education</a>
-          <a href="#work"><i class="fas fa-chevron-circle-right"></i> projects</a>
-          <a href="#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
-          <a href="#certifications"><i class="fas fa-chevron-circle-right"></i> certifications</a>
+          <a href="#home"><i class="fas fa-chevron-circle-right"></i> Home</a>
+          <a href="#about"><i class="fas fa-chevron-circle-right"></i> About</a>
+          <a href="#skills"><i class="fas fa-chevron-circle-right"></i> Skills</a>
+          <a href="#education"><i class="fas fa-chevron-circle-right"></i> Education</a>
+          <a href="#work"><i class="fas fa-chevron-circle-right"></i> Projects</a>
+          <a href="#experience"><i class="fas fa-chevron-circle-right"></i> Experience</a>
+          <a href="#certifications"><i class="fas fa-chevron-circle-right"></i> Certifications</a>
       </div>
 
       <div class="box">
