--- a/index.html
+++ b/index.html
@@ -178,18 +178,16 @@
               <p>May 2024 - November 2024</p>
             </div>
             <div class="description">
-              <p>Your detailed job description goes here. Include your responsibilities, achievements, and skills gained during this internship. • Worked with Docker, Kubernetes and CI/CD to build and manage containerized deployments, automate CI/CD
-                pipelines and streamline DevOps workflows using GitOps practices.
-                • Assisted with system-level operations including server troubleshooting, datacenter migrations, and VM operations on
-                VMware vSphere.
-                • Contributed to the deployment of the Vision project on Kubernetes (micro-service architecture), SQ-Qlink project
-                (CD automation), Dialog HCSO (Huawei Cloud datacenter setup), BOC server migration.
-                • Tech Stack: Kubernetes, Docker, ArgoCD, Jenkins, Rancher Manager, NeuVector, Chef, RHEL, Azure, Git,
-                PostgreSQL, MongoDB, Bash</p>
+                <ul>
+                  <li>Worked with Docker, Kubernetes and CI/CD to build and manage containerized deployments, automate CI/CD pipelines and streamline DevOps workflows using GitOps practices.</li>
+                  <li>Assisted with system-level operations including server troubleshooting, datacenter migrations, and VM operations on VMware vSphere.</li>
+                  <li>Contributed to the deployment of the Vision project on Kubernetes (micro-service architecture), SQ-Qlink project (CD automation), Dialog HCSO (Huawei Cloud datacenter setup), BOC server migration.</li>
+                  <li><b>Tech Stack:</b> Kubernetes, Docker, ArgoCD, Jenkins, Rancher Manager, NeuVector, Chef, RHEL, Azure, Git, PostgreSQL, MongoDB, Bash</li>
+                </ul>
             </div>
           </div>
         </div>
-        <img src="assets/images/yasindu-2.png" alt="Your Photo" class="timeline-image-right">
+        <img src="assets/images/MIT.png" alt="Your Photo" class="timeline-image-right">
       </div>
     </div>
   </div>
