--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="box">
       <div class="content">
       <h3>GCE Advanced Level- Physical Science Stream</h3>
-      <p>De Mazenod College | <i>Z-Score: 2.0137</i></p>
+      <p>De Mazenod College | <i>Result: 3As</i> | <i>Z-Score: 2.0137</i></p>
       <h4>Aug. 2017– Aug. 2019</h4>
       </div>
     </div>
